--- a/public/html/index.html
+++ b/public/html/index.html
@@ -1,12 +1,36 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <title>Darkfrost</title>
+    <script src="https://unpkg.com/vue"></script>
     <link rel="stylesheet" href="/css/main.css">
   </head>
   <body>
+    <div id="currently">
+      <header>
+        <h4>{{ location }}</h4>
+      </header>
+      <main>
+        <div>
+          <h1>{{ apparentTemperature }}</h1>
+        </div>
+        <div>
+          <h2>{{ summary }}</h2>
+          <div>
+            <img src="https://placehold.it/200x200" alt="">
+          </div>
+        </div>
+        <div>
+          <h3>{{ precipProbability }}</h3>
+          <h3>{{ humidity }}</h3>
+        </div>
+      </main>
+      <footer>
+        <h4>{{ time }}</h4>
+      </footer>
+    </div>
 
-    <script src="app.js"></script>
+    <script src="/js/app.js"></script>
   </body>
 </html>
