--- a/public/html/index.html
+++ b/public/html/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Darkfrost</title>
     <script src="https://unpkg.com/vue"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <link rel="stylesheet" href="/css/main.css">
   </head>
   <body>
