--- a/public/html/index.html
+++ b/public/html/index.html
@@ -19,7 +19,7 @@
         <div>
           <h2>{{ summary }}</h2>
           <div>
-            <img src="https://placehold.it/200x200" alt="">
+            <img :src="iconUrl(icon)" alt="">
           </div>
         </div>
         <div>
