--- a/public/html/index.html
+++ b/public/html/index.html
@@ -19,7 +19,7 @@
         <div>
           <h2>{{ summary }}</h2>
           <div>
-            <img :src="iconUrl(icon)" alt="">
+            <img :src="iconUrl(icon)" />
           </div>
         </div>
         <div>
@@ -30,6 +30,16 @@
       <footer>
         <h4>{{ time }}</h4>
       </footer>
+    </div>
+    <div id="daily">
+      <main>
+        <div>
+          <h2>{{ summary }}</h2>
+        </div>
+        <div>
+          <img :src="iconUrl(icon)" />
+        </div>
+      </main>
     </div>
 
     <script src="/js/app.js"></script>
