created the hourlyWidget using VueJS. In the process, we learned how to manipulate JavaScript Date objects, handle arrays of data for rending using the v-for direction, and realized that the this keyword in the promise .then handler needed to be changed to refer to the Vue instance so we bound the outer this context to the .then function

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -8,6 +8,21 @@
     <link rel="stylesheet" href="/css/main.css">
   </head>
   <body>
+    <div id="hourly">
+      <header>
+        <div>
+          {{ summary }}
+        </div>
+        <img :src="getMainIcon()" alt="">
+      </header>
+      <main>
+        <ul>
+          <li v-for='hour in hours'>
+            <img :src="getHourlyIcon(hour.icon)"> - {{ hour.summary }} - {{ hour.apparentTemperature }} - {{ getDate(hour.time) }}
+          </li>
+        </ul>
+      </main>
+    </div>
     <div id="currently">
       <header>
         <div class="">
