--- a/public/html/index.html
+++ b/public/html/index.html
@@ -16,21 +16,22 @@
           <input type="text" placeholder='City, State:' v-model='location'>
           <button v-on:click='getLocation(location)'>Update Current Weather</button>
         </div>
-        <h4 class="text-center font-white">Current weather for {{ location }}</h4>
+        <h3 class="text-center font-white">Current weather for {{ location }}</h3>
         <div class="row">
           <div class="col-xs-6">
             <h1 class="text-center font-white">{{ apparentTemperature }}&deg;</h1>
-            <h2 class="text-center font-dk-blue">{{ summary }}</h2>
-            <h4 class="text-center">{{ precipProbability }}</h4>
-            <h4 class="text-center">{{ humidity }}</h4>
-            <h5 class="text-center">{{ time }}</h5>
+            <h2 class="text-center font-white">{{ summary }}</h2>
+            <h4 class="text-center font-white">{{ precipProbability }}% <small class="font-white">chance of rain</small></h4>
+            <h4 class="text-center font-white">{{ humidity }}% <small class="font-white">humidity</small></h4>
+            <h5 class="text-center font-white">{{ getDate(time) }}</h5>
           </div>
           <div class="col-xs-6">
             <div class="flex">
               <img class="img-responsive icon" :src="iconUrl(icon)" width="200" />
             </div>
             <div id="minutely">
-              <h4 class="text-center">Minutely: {{ summary }}</h4>
+              <h4 class="text-center font-white">Minutely:</h4>
+              <h4 class="text-center font-white">{{ summary }}</h4>
             </div>
           </div>
         </div>
@@ -40,7 +41,8 @@
     <div id="hourly" class="margin">
       <div class="row">
         <div class="col-xs-10 col-xs-offset-1 flex">
-          <h5 class="text-left padding-right">Hourly: {{ summary }}</h5>
+          <h4 class="text-left font-white">Hourly:&nbsp;</h4>
+          <h4 class="padding-right font-white">{{ summary }}</h4>
           <img class="img-responsive" :src="getHourlyIcon(icon)" alt="" width="200">
         </div>
       </div>
@@ -79,25 +81,32 @@
       </main>
     </div>
 
-    <div id="daily">
+    <div id="daily" class="margin">
       <main>
         <div class="text-center">
           <input type="text" placeholder='Latitude:' v-model='latitude'>
           <input type="text" placeholder='Longitude:' v-model='longitude'>
           <button v-on:click='updateWeather()'>Update Daily Weather</button>
         </div>
-        <div>
-          <h2>Daily: {{ summary }}</h2>
+        <div class="row">
+          <div class="col-xs-10 col-xs-offset-1 margin">
+            <h2 class="text-center">Daily Weather Forecast</h2>
+            <div class="row">
+              <div class="col-xs-6 col-xs-offset-3 flex">
+                <h3 class="text-right">{{ summary }}</h3>
+                <img class="img-responsive" :src="iconUrl(icon)"  width="100" />
+              </div>
+            </div>
+          </div>
         </div>
-        <div>
-          <img class="img-responsive" :src="iconUrl(icon)"  width="200" />
-        </div>
-        <div>
-          <ul>
-            <li v-for='sunTime in sunTimes'>
-              {{ sunTime.sunriseTime }} - {{ sunTime.sunsetTime }}
-            </li>
-          </ul>
+        <div class="container">
+          <div v-for='sunTime in sunTimes' class="sunTimes">
+            <p class="text-center">Sunrise:</br>{{ getDate(sunTime.sunriseTime) }}</p>
+          </div>
+          <div v-for='sunTime in sunTimes' class="sunTimes">
+            <img src="/images/sunrise.png" width="75" /><br/>
+            <p class="text-center">Sunset:</br>{{ getDate(sunTime.sunsetTime) }}</p>
+          </div>
         </div>
       </main>
     </div>
