--- a/public/html/index.html
+++ b/public/html/index.html
@@ -19,7 +19,7 @@
         <h3 class="text-center font-white">Current weather for {{ location }}</h3>
         <div class="row">
           <div class="col-xs-6">
-            <h1 class="text-center font-white">{{ apparentTemperature }}&deg;</h1>
+            <h1 class="text-center font-white">{{ apparentTemperature }}&deg;F</h1>
             <h2 class="text-center font-white">{{ summary }}</h2>
             <h4 class="text-center font-white">{{ precipProbability }}% <small class="font-white">chance of rain</small></h4>
             <h4 class="text-center font-white">{{ humidity }}% <small class="font-white">humidity</small></h4>
